Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Happy Birthday Lakshya</title>
+  <title>Happy Birthday Lakshya♡
+  I love you baby🩷🎀🫂</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
@@ -118,8 +119,8 @@
 <section id="cover">
   <div class="card">
     <h1>Happy Birthday</h1>
-    <h2>Lakshya 🌙</h2>
-    <p>This is something small, but made only for you.</p>
+    <h2>Lakshya 🌙🤍</h2>
+    <p>This is the least i could do😁, also i wanted to ask something😚Ps. say yes.</p>
     <button onclick="nextSection('letter')">Open Your Gift</button>
   </div>
 </section>
@@ -127,15 +128,17 @@
 <!-- Section 2: Love Letter -->
 <section id="letter" class="hidden">
   <div class="card">
-    <h2>Dear Love,</h2>
+    <h2>Dear Kitten,</h2>
     <p>
       Happy Birthday.  
       You make my days softer and my smiles easier.  
-      Loving you feels like home, and today I just wanted you to feel
-      how special you are to me.
+      Loving you feels like home and today I just wanted you to feel
+      how special you are to me. Also, I'm making a promise, an actual one (hehe) 
+      I will always LOVE you, no matter what.
     </p>
-    <p>
+    <p> 
       I hope this little surprise makes you smile the way you make me smile.
+      Side note: I'm so proud of myself to actually keep it a surprise.😭💖
     </p>
     <button onclick="nextSection('song')">Next</button>
   </div>
@@ -144,9 +147,9 @@
 <!-- Section 3: Song -->
 <section id="song" class="hidden">
   <div class="card">
-    <h2>A song for you</h2>
+    <h2>A song for you or as you would say us🤭</h2>
     <div class="vinyl"></div>
-    <p>This song reminds me of us.</p>
+    <p>Mon cœur te choisit. À chaque fois.✨️</p>
     <p>(You can embed a Spotify song here)</p>
     <button onclick="nextSection('date')">Next</button>
   </div>
@@ -155,17 +158,18 @@
 <!-- Section 4: Date -->
 <section id="date" class="hidden">
   <div class="card">
-    <h2>Will you go on a date with me?</h2>
-    <button onclick="nextSection('dress')">Yes 💙</button>
+    <h2>Will you be my valentine, forever?🙈🩷</h2>
+    <button onclick="nextSection('dress')">Yes 💘</button>
   </div>
 </section>
 
 <!-- Section 5: Dress Code -->
 <section id="dress" class="hidden">
   <div class="card">
-    <h2>Tonight’s Dress Code</h2>
-    <h1>Blue 💙</h1>
-    <p>Because it suits you perfectly.</p>
+    <h2>And as a gift to youu😌...</h2>
+    <h1>A Babyy coupon💕💫</h1>
+    <p>It allows you to make me do anything that i can't say no to. And btw i didn't
+    know what to name this coupon you change the name if you want🥲👍🏻🩷.</p>
   </div>
 </section>
 
