--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <div class="card">
     <h2>A song for you or as you would say us🤭</h2>
     <div class="music-circle">
-  <img src="vinyl.jpg" alt="Us">
+  <img src="Snapchat-1611834098.jpg" alt="Us">
     </div>
     <p>Mon cœur te choisit. À chaque fois.✨️</p>
     <p>(You can embed a Spotify song here)</p>
