--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
     }
 
     .vinyl {
-  width: 160px;
-  height: 160px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
   overflow: hidden;
-  margin: 20px auto;
+  margin: 15px auto;
   animation: spin 8s linear infinite;
   background: black;
-  box-shadow: 0 12px 35px rgba(0,0,0,0.6);
-}
+  box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+    }
 
 .vinyl img {
   width: 100%;
@@ -154,10 +154,9 @@
   </script>
 <body>
 
-<!-- Background Music -->
-<audio controls autoplay loop>
-  <!-- Replace with your own music file -->
-  <source src="music.mp3" type="audio/mpeg">
+<audio
+  id="bg-music" src="music.mp3" loop autoplay muted>
+  
 </audio>
 
 <!-- Section 1: Cover -->
@@ -238,6 +237,14 @@
     setTimeout(() => heart.remove(), 7000);
   }, 800);
 </script>
+  <script>
+  const music = document.getElementById("bg-music");
+
+  document.addEventListener("click", () => {
+    music.muted = false;
+    music.play();
+  }, { once: true });
+  </script>
  
 </body>
 </html>
